# rust-btc-solominer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.ini  deploy.sh  docker-compose.yml
src/: main.rs
windows/: README.MD
windows-package/: config.ini  start-miner.bat  start-miner.ps1
